k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factoriel
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: factoriel
