k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factoriel
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: factoriel.<Cluster_host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: factoriel
                port:
                  number: 80
